@@ -290,6 +290,9 @@ Core and Builtins
 
 - Issue #7072: isspace(0xa0) is true on Mac OS X
 
+- Issue #8084: PEP 370 now conforms to system conventions for framework
+  builds on MacOS X. That is, "python setup.py install --user" will install
+    into "~/Library/Python/2.7" instead of "~/.local".
 
 C-API
 -----
